--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <i class="ri-shopping-cart-2-fill"></i>
         </div>
         <div class="center">
-            <h1>Lightly padded,<br>quilted jacket in<br> recycled polyester.</h1>
+            <h1>Lightly padded by me,<br>quilted jacket in<br> recycled polyester.</h1>
             <div class="subTitle">
                 <p>Exclusive brands aspire for the label haute<br>
                     couture, but the term is technically limited to <br>
